# knowledge_project

./: README.md  environment.yml  pyproject.toml
src/kg_project/: __init__.py  cli.py  config.py  extractor.py  models.py  neo4j_store.py  parser.py  visualize.py
