[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-graph-project"
version = "0.1.0"
description = "Multimodal textbook knowledge graph pipeline with Ollama and Neo4j"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pymupdf>=1.24",
  "pillow>=10.0",
  "requests>=2.32",
  "neo4j>=5.22",
  "pydantic>=2.8",
  "pyvis>=0.3.2",
  "networkx>=3.3",
  "typer>=0.12",
  "rich>=13.7",
]

[project.scripts]
kg-project = "kg_project.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
